updated services elements

--- a/index.html
+++ b/index.html
@@ -376,11 +376,11 @@
                                 <p class="pb-2"> Donec volutpat tincidunt neque, vitae lobortis libero mattis sed tempus.</p>
                                 
                                 <!-- services list -->
-                                <div class="card" style="border-left: 0px; border-right: 0px; border-bottom: 0px;" >
+                                <div class="" style="border-left: 0px; border-right: 0px; border-bottom: 0px;" >
                                     <ul class="list-group list-group-flush">
-                                        <li class="list-group-item"><img width="49" height="49" class="mr-4" src="assets/images/services icons/strategy and oprations.png" alt="Web Development"> <a class="text-secondary" href="./products-services.html#strategy-and-operations">Strategy and Operations</a> </li>
-                                        <li class="list-group-item"><img width="49" height="49" class="mr-4" src="assets/images/services icons/technology services.png" alt="Web Development"> <a class="text-secondary" href="./products-services.html#technology-consulting">Technology Consulting</a> </li>
-                                        <li class="list-group-item"><img width="49" height="49" class="mr-4" src="assets/images/services icons/project management services.png" alt="Web Development"> <a class="text-secondary" href="./products-services.html#project-management-services">Project Management Services</a> </li>
+                                        <li class="list-group-item mb-1"><img width="49" height="49" class="mr-4" src="assets/images/services icons/strategy and oprations.png" alt="Web Development"> <a class="text-secondary" href="./products-services.html#strategy-and-operations">Strategy and Operations</a> </li>
+                                        <li class="list-group-item mb-1"><img width="49" height="49" class="mr-4" src="assets/images/services icons/technology services.png" alt="Web Development"> <a class="text-secondary" href="./products-services.html#technology-consulting">Technology Consulting</a> </li>
+                                        <li class="list-group-item mb-1"><img width="49" height="49" class="mr-4" src="assets/images/services icons/project management services.png" alt="Web Development"> <a class="text-secondary" href="./products-services.html#project-management-services">Project Management Services</a> </li>
                                     </ul>
                                 </div>
                             </div>
@@ -395,7 +395,7 @@
                             <div class="media-body">
                                 <a href="./products-services.html#digital_solutions"><h5>Digital Solutions</h5></a>
                                 <p class="py-3"> Donec volutpat tincidunt neque, vitae lobortis libero mattis sed tempus.</p>
-                                <div class="card" style="border-bottom: 0px;">
+                                <div class="" style="border-bottom: 0px;">
                                     <ul class="list-group list-group-flush " style="flex-direction: row1;">
                                         <div class="row mb-1">
                                             <li class="list-group-item col-lg-6"><img width="49" height="49" class="" src="assets/images/services icons/crm.png" alt="Customer Relationship Management"> <a class="text-secondary" href="./products-services.html#customer-relationship-management">Customer Relationship Management</a> </li>
@@ -432,10 +432,10 @@
                                 Donec volutpat tincidunt neque, vitae lobortis libero mattis sed tempus.
                                 
                                 <!-- services list -->
-                                <div class="card">
+                                <div class="">
                                     <ul class="list-group list-group-flush">
-                                        <li class="list-group-item"><img width="49" height="49" class="mr-4" src="assets/images/services icons/infrastructure as a service.png" alt="Web Development"> <a class="text-secondary" href="./products-services.html#infrastructure-as-a-service">Infrastructure As A Service</a> </li>
-                                        <li class="list-group-item"><img width="49" height="49" class="mr-4" src="assets/images/services icons/software as a service.png" alt="Web Development"> <a class="text-secondary" href="./products-services.html#software-as-a-service">Software As A Service</a> </li>
+                                        <li class="list-group-item mb-1"><img width="49" height="49" class="mr-4" src="assets/images/services icons/infrastructure as a service.png" alt="Web Development"> <a class="text-secondary" href="./products-services.html#infrastructure-as-a-service">Infrastructure As A Service</a> </li>
+                                        <li class="list-group-item mb-1"><img width="49" height="49" class="mr-4" src="assets/images/services icons/software as a service.png" alt="Web Development"> <a class="text-secondary" href="./products-services.html#software-as-a-service">Software As A Service</a> </li>
                                     </ul>
                                 </div>
                             </div>
@@ -450,9 +450,9 @@
                             <div class="media-body">
                                 <h5>Devices</h5>
                                 Donec volutpat tincidunt neque, vitae lobortis libero mattis sed tempus.
-                                <div class="card">
+                                <div class="">
                                     <ul class="list-group list-group-flush">
-                                        <li class="list-group-item"><img width="49" height="49" class="mr-4" src="assets/images/services icons/push to talk.png" alt="Web Development"> <a class="text-secondary" href="./products-services.html#push-to-talk">Push To Talk</a> </li>
+                                        <li class="list-group-item mb-1"><img width="49" height="49" class="mr-4" src="assets/images/services icons/push to talk.png" alt="Web Development"> <a class="text-secondary" href="./products-services.html#push-to-talk">Push To Talk</a> </li>
                                     </ul>
                                 </div>
                             </div>
