--- a/products-services.html
+++ b/products-services.html
@@ -124,14 +124,58 @@
     </header>
     <!-- Header End -->
 
-    <!-- Services Start -->
-    <section class="services py-3 pt-5">
-        <div class="container mt-5 pt-5">
-            <!-- services header -->
-            <div class="title text-center">
-                <!-- <h6>Our Speakers</h6> -->
-                <h1 class="title-blue"><a href="./products-services.html">Solutions & Services</a></h1>
+    <!-- Hero Start -->
+    <section class="hero hero-sm">
+        <div class="container">
+            <div class="row">
+                <!-- swiper / slider -->
+                <div class="col-12 offset-md-1 col-md-11">
+                    <div class="swiper-container hero-slider pt-5">
+                        <div class="">
+                            <!-- swiper / slide element start -->
+                            <div class="swiper-slide slide-content mb-5 d-flex align-items-center">
+                                <div class="single-slide mb-5 pb-5">
+                                    <!-- short text heading -->
+                                    <h1 class="mb-5 mt-0 pb-5" data-aos="fade-right" data-aos-delay="200">
+                                        Solutions & Services
+                                    </h1>
+
+                                    <!-- brief text -->
+                                    <!-- <p data-aos="fade-right" data-aos-delay="600">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reprehenderit assumenda fuga quisquam earum magni unde!
+                                        Expecting
+                                        Peoples’s predefined dummy text<br> chunks as necessary, making this the first.
+                                    </p> -->
+
+                                    <!-- call to action buttons -->
+                                    <!-- <a data-aos="fade-right" data-aos-delay="900" href="#" class="btn btn-primary">Call to action 1</a>
+                                    <a data-aos="fade-right" data-aos-delay="900" href="#" class="btn btn-primary">Call to action 2</a> -->
+                                </div>
+                            </div>
+                            <!-- swiper / slide element end -->
+
+                        </div>
+
+                    </div>
+                </div>
             </div>
+            <!-- Add Control -->
+            <!-- <span class="arr-left"><i class="fa fa-angle-left"></i></span>
+            <span class="arr-right"><i class="fa fa-angle-right"></i></span> -->
+        </div>
+        <div class="texture"></div>
+        <div class="diag-bg"></div>
+    </section>
+    <!-- Hero End -->
+
+
+    <!-- Services Start -->
+    <section class="services pt-0">
+        <div class="container">
+            <!-- services header -->
+            <!-- <div class="title text-center">
+                <h6>Our Speakers</h6>
+                <h1 class="title-blue"><a href="./products-services.html">Solutions & Services</a></h1>
+            </div> -->
             <!-- services body -->
             <div class="container">
                 <div class="row">
@@ -149,11 +193,11 @@
                                 <p class="pb-2"> Donec volutpat tincidunt neque, vitae lobortis libero mattis sed tempus.</p>
                                 
                                 <!-- services list -->
-                                <div class="card" style="border-left: 0px; border-right: 0px; border-bottom: 0px;" >
+                                <div class="" style="border-left: 0px; border-right: 0px; border-bottom: 0px;" >
                                     <ul class="list-group list-group-flush">
-                                        <li class="list-group-item"><img width="49" height="49" class="mr-4" src="assets/images/services icons/strategy and oprations.png" alt="Web Development"> <a class="text-secondary" href="#strategy-and-operations">Strategy and Operations</a> </li>
-                                        <li class="list-group-item"><img width="49" height="49" class="mr-4" src="assets/images/services icons/technology services.png" alt="Web Development"> <a class="text-secondary" href="#technology-consulting">Technology Consulting</a> </li>
-                                        <li class="list-group-item"><img width="49" height="49" class="mr-4" src="assets/images/services icons/project management services.png" alt="Web Development"> <a class="text-secondary" href="#project-management-services">Project Management Services</a> </li>
+                                        <li class="list-group-item mb-1"><img width="49" height="49" class="mr-4" src="assets/images/services icons/strategy and oprations.png" alt="Web Development"> <a class="text-secondary" href="#strategy-and-operations">Strategy and Operations</a> </li>
+                                        <li class="list-group-item mb-1"><img width="49" height="49" class="mr-4" src="assets/images/services icons/technology services.png" alt="Web Development"> <a class="text-secondary" href="#technology-consulting">Technology Consulting</a> </li>
+                                        <li class="list-group-item mb-1"><img width="49" height="49" class="mr-4" src="assets/images/services icons/project management services.png" alt="Web Development"> <a class="text-secondary" href="#project-management-services">Project Management Services</a> </li>
                                     </ul>
                                 </div>
                             </div>
@@ -168,7 +212,7 @@
                             <div class="media-body">
                                 <a href="./products-services.html#digital_solutions"><h5>Digital Solutions</h5></a>
                                 <p class="py-3"> Donec volutpat tincidunt neque, vitae lobortis libero mattis sed tempus.</p>
-                                <div class="card" style="border-bottom: 0px;">
+                                <div class="" style="border-bottom: 0px;">
                                     <ul class="list-group list-group-flush " style="flex-direction: row1;">
                                         <div class="row mb-1">
                                             <li class="list-group-item col-lg-6"><img width="49" height="49" class="" src="assets/images/services icons/crm.png" alt="Customer Relationship Management"> <a class="text-secondary" href="#customer-relationship-management">Customer Relationship Management</a> </li>
@@ -205,10 +249,10 @@
                                 Donec volutpat tincidunt neque, vitae lobortis libero mattis sed tempus.
                                 
                                 <!-- services list -->
-                                <div class="card">
+                                <div class="">
                                     <ul class="list-group list-group-flush">
-                                        <li class="list-group-item"><img width="49" height="49" class="mr-4" src="assets/images/services icons/infrastructure as a service.png" alt="Web Development"> <a class="text-secondary" href="#infrastructure-as-a-service">Infrastructure As A Service</a> </li>
-                                        <li class="list-group-item"><img width="49" height="49" class="mr-4" src="assets/images/services icons/software as a service.png" alt="Web Development"> <a class="text-secondary" href="#software-as-a-service">Software As A Service</a> </li>
+                                        <li class="list-group-item mb-1"><img width="49" height="49" class="mr-4" src="assets/images/services icons/infrastructure as a service.png" alt="Web Development"> <a class="text-secondary" href="#infrastructure-as-a-service">Infrastructure As A Service</a> </li>
+                                        <li class="list-group-item mb-1"><img width="49" height="49" class="mr-4" src="assets/images/services icons/software as a service.png" alt="Web Development"> <a class="text-secondary" href="#software-as-a-service">Software As A Service</a> </li>
                                     </ul>
                                 </div>
                             </div>
@@ -223,9 +267,9 @@
                             <div class="media-body">
                                 <h5>Devices</h5>
                                 Donec volutpat tincidunt neque, vitae lobortis libero mattis sed tempus.
-                                <div class="card">
+                                <div class="">
                                     <ul class="list-group list-group-flush">
-                                        <li class="list-group-item"><img width="49" height="49" class="mr-4" src="assets/images/services icons//push to talk.png" alt="Web Development"> <a class="text-secondary" href="#push-to-talk">Push To Talk</a> </li>
+                                        <li class="list-group-item mb-1"><img width="49" height="49" class="mr-4" src="assets/images/services icons//push to talk.png" alt="Web Development"> <a class="text-secondary" href="#push-to-talk">Push To Talk</a> </li>
                                     </ul>
                                 </div>
                             </div>
