--- a/industries.html
+++ b/industries.html
@@ -123,18 +123,62 @@
     </header>
     <!-- Header End -->
 
-    <!-- Industry Services Start -->
-    <section class="services">
-        <div class="container mt-5 pt-5">
-            <div class="title text-center">
-                <!-- <h6>Our Speakers</h6> -->
-                <h1 class="title-orange">Industry</h1>
+    <!-- Hero Start -->
+    <section class="hero hero-sm">
+        <div class="container">
+            <div class="row">
+                <!-- swiper / slider -->
+                <div class="col-12 offset-md-1 col-md-11">
+                    <div class="swiper-container hero-slider pt-5">
+                        <div class="">
+                            <!-- swiper / slide element start -->
+                            <div class="swiper-slide slide-content mb-5 d-flex align-items-center">
+                                <div class="single-slide mb-5 pb-5">
+                                    <!-- short text heading -->
+                                    <h1 class="mb-5 mt-0 pb-5" data-aos="fade-right" data-aos-delay="200">
+                                        Industry
+                                    </h1>
+
+                                    <!-- brief text -->
+                                    <!-- <p data-aos="fade-right" data-aos-delay="600">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reprehenderit assumenda fuga quisquam earum magni unde!
+                                        Expecting
+                                        Peoples’s predefined dummy text<br> chunks as necessary, making this the first.
+                                    </p> -->
+
+                                    <!-- call to action buttons -->
+                                    <!-- <a data-aos="fade-right" data-aos-delay="900" href="#" class="btn btn-primary">Call to action 1</a>
+                                    <a data-aos="fade-right" data-aos-delay="900" href="#" class="btn btn-primary">Call to action 2</a> -->
+                                </div>
+                            </div>
+                            <!-- swiper / slide element end -->
+
+                        </div>
+
+                    </div>
+                </div>
             </div>
+            <!-- Add Control -->
+            <!-- <span class="arr-left"><i class="fa fa-angle-left"></i></span>
+            <span class="arr-right"><i class="fa fa-angle-right"></i></span> -->
+        </div>
+        <div class="texture"></div>
+        <div class="diag-bg"></div>
+    </section>
+    <!-- Hero End -->
+
+
+    <!-- Industry Services Start -->
+    <section class="services py-3">
+        <div class="container">
+            <!-- <div class="title text-center">
+                <h6>Our Speakers</h6>
+                <h1 class="title-orange">Industry</h1>
+            </div> -->
             <div class="container">
                 <div class="row">
                     <!-- Banking Financial Services & Insurance -->
-                    <div id="banking" class="col-lg-12">
-                        <div class="media" data-aos="fade-up" data-aos-delay="200" data-aos-duration="400">
+                    <div id="banking" class="col-lg-12 bg-light my-1">
+                        <div class="media mb-3" data-aos="fade-up" data-aos-delay="200" data-aos-duration="400">
                             <img class="mr-4" src="assets/images/service1.png" alt="Web Development">
                             <div class="media-body">
                                 <h5 class=" title-orange">Banking Financial Services & Insurance</h5>
@@ -151,8 +195,8 @@
                     </div>
 
                     <!-- Retail, Consumer Packaged Goods, Transportation -->
-                    <div id="retail" class="col-lg-12">
-                        <div class="media" data-aos="fade-up" data-aos-delay="400" data-aos-duration="600">
+                    <div id="retail" class="col-lg-12 bg-light my-1">
+                        <div class="media mb-3" data-aos="fade-up" data-aos-delay="400" data-aos-duration="600">
                             <img class="mr-4" src="assets/images/service2.png" alt="Web Development">
                             <div class="media-body">
                                 <h5 class=" title-orange">Retail, Consumer Packaged Goods, Transportation</h5>
@@ -166,8 +210,8 @@
                     </div>
 
                     <!-- Government Sector -->
-                    <div id="government" class="col-lg-12">
-                        <div class="media" data-aos="fade-up" data-aos-delay="600" data-aos-duration="800">
+                    <div id="government" class="col-lg-12 bg-light my-1">
+                        <div class="media mb-3" data-aos="fade-up" data-aos-delay="600" data-aos-duration="800">
                             <img class="mr-4" src="assets/images/service3.png" alt="Web Development">
                             <div class="media-body">
                                 <h5 class=" title-orange">Government Sector</h5>
@@ -181,8 +225,8 @@
                     </div>
 
                     <!-- Healthcare, Life Science & Services -->
-                    <div id="healthcare" class="col-lg-12">
-                        <div class="media" data-aos="fade-up" data-aos-delay="200" data-aos-duration="400">
+                    <div id="healthcare" class="col-lg-12 bg-light my-1">
+                        <div class="media mb-3" data-aos="fade-up" data-aos-delay="200" data-aos-duration="400">
                             <img class="mr-4" src="assets/images/service4.png" alt="Web Development">
                             <div class="media-body">
                                 <h5 class=" title-orange">Healthcare, Life Science & Services</h5>
@@ -194,8 +238,8 @@
                     </div>
 
                     <!-- Energy, Natural Resources Utilities and Engineering & Construction -->
-                    <div id="energy" class="col-lg-12">
-                        <div class="media" data-aos="fade-up" data-aos-delay="400" data-aos-duration="600">
+                    <div id="energy" class="col-lg-12 bg-light my-1">
+                        <div class="media mb-3" data-aos="fade-up" data-aos-delay="400" data-aos-duration="600">
                             <img class="mr-4" src="assets/images/service1.png" alt="Web Development">
                             <div class="media-body">
                                 <h5 class=" title-orange">Energy, Natural Resources Utilities and Engineering & Construction</h5>
@@ -210,8 +254,8 @@
                     </div>
 
                     <!-- Graphic Design, Printing, Corporate Branding & Advertising -->
-                    <div id="graphic" class="col-lg-12">
-                        <div class="media" data-aos="fade-up" data-aos-delay="600" data-aos-duration="800">
+                    <div id="graphic" class="col-lg-12 bg-light my-1">
+                        <div class="media mb-3" data-aos="fade-up" data-aos-delay="600" data-aos-duration="800">
                             <img class="mr-4" src="assets/images/service5.png" alt="Web Development">
                             <div class="media-body">
                                 <h5 class=" title-orange">Graphic Design, Printing, Corporate Branding & Advertising</h5>
