--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Quality Designs | Home</title>
     <!-- Stylesheets & Fonts -->
     <!-- Google Fonts -->
-    <!-- <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700,700i%7CRajdhani:400,600,700" rel="stylesheet"> -->
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700,700i" rel="stylesheet">
     <!-- Plugins Stylesheets -->
     <link rel="stylesheet" href="assets/css/loader/loaders.css">
     <link rel="stylesheet" href="assets/css/font-awesome/font-awesome.css">
@@ -581,8 +581,8 @@
         </div>
         <!-- Foot Note End -->
     </footer>
+    <!-- Footer End -->
 
-    <!-- Footer Endt -->
     <!--jQuery-->
     <script src="assets/js/jquery-3.3.1.js"></script>
     <!--Plugins-->
