updated hero backgrounds

--- a/industries.html
+++ b/industries.html
@@ -166,7 +166,7 @@
     <!-- Header End -->
 
     <!-- Hero Start -->
-    <section class="hero hero-sm">
+    <section class="hero industry-hero hero-sm">
         <div class="container">
             <div class="row">
                 <!-- swiper / slider -->
