--- a/vecancies.html
+++ b/vecancies.html
@@ -165,10 +165,52 @@
     </header>
     <!-- Header End -->
 
+    <!-- Hero Start -->
+    <section class="hero vecancies-hero hero-sm">
+        <div class="container">
+            <div class="row">
+                <!-- swiper / slider -->
+                <div class="col-12 offset-md-1 col-md-11">
+                    <div class="swiper-container hero-slider pt-5">
+                        <div class="">
+                            <!-- swiper / slide element start -->
+                            <div class="swiper-slide slide-content mb-5 d-flex align-items-center">
+                                <div class="single-slide mb-5 pb-5">
+                                    <!-- short text heading -->
+                                    <h1 class="mb-5 mt-0 pb-5" data-aos="fade-right" data-aos-delay="200">
+                                        Vecancies
+                                    </h1>
+
+                                    <!-- brief text -->
+                                    <!-- <p data-aos="fade-right" data-aos-delay="600">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reprehenderit assumenda fuga quisquam earum magni unde!
+                                        Expecting
+                                        Peoples’s predefined dummy text<br> chunks as necessary, making this the first.
+                                    </p> -->
+
+                                    <!-- call to action buttons -->
+                                    <!-- <a data-aos="fade-right" data-aos-delay="900" href="#" class="btn btn-primary">Call to action 1</a>
+                                    <a data-aos="fade-right" data-aos-delay="900" href="#" class="btn btn-primary">Call to action 2</a> -->
+                                </div>
+                            </div>
+                            <!-- swiper / slide element end -->
+
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+            <!-- Add Control -->
+            <!-- <span class="arr-left"><i class="fa fa-angle-left"></i></span>
+            <span class="arr-right"><i class="fa fa-angle-right"></i></span> -->
+        </div>
+        <div class="texture"></div>
+        <div class="diag-bg"></div>
+    </section>
+    <!-- Hero End -->
 
     <!-- Call To Action Start -->
-    <section class="cta pt-5 " data-aos="fade-up" data-aos-delay="0">
-        <div class="container mt-1 pt-5">
+    <section class="cta " data-aos="fade-up" data-aos-delay="0">
+        <div class="container mt-1 pt-3">
             <div class="cta-content pb-5 d-xl-flex align-items-center justify-content-around text-center text-xl-left">
                 <div class="content" data-aos="fade-right" data-aos-delay="200">
                     <h2>Vecancies</h2>
