--- a/products-services.html
+++ b/products-services.html
@@ -168,7 +168,7 @@
     <!-- Header End -->
 
     <!-- Hero Start -->
-    <section class="hero hero-sm">
+    <section class="hero product-hero hero-sm">
         <div class="container">
             <div class="row">
                 <!-- swiper / slider -->
@@ -343,7 +343,7 @@
 
                     <div id="accordion" role="tablist" class="p-2 mb-2 bg-light rounded">
                         <!-- strategy and operations -->
-                        <div id="strategy-and-operations" class="card  my-2 rounded ">
+                        <div id="strategy-and-operations" class="card  my-2 rounded pt-5">
                           <div class="card-header" role="tab" id="headingOne">
                             <h5 class="mb-0">
                               <h5 data-toggle="collapse" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne" class="collapsed text-primary"primary">
