addded new heros

--- a/about.html
+++ b/about.html
@@ -365,7 +365,7 @@
                                         <div class="card mt-0">
                                             <div class="img-content">
                                                 <div class=""></div>
-                                                <img src="assets/images/leader.JPG" alt="img">
+                                                <img src="assets/images/leader3.png" alt="img">
                                                 <div class="bottom-box pl-5">
                                                     <h3>Eugine Silinnda</h3>
                                                     <p>Managing Director</p>
