--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
     <!-- Header End -->
 
     <!-- Hero Start -->
-    <section class="hero ">
+    <section class="hero">
         <div class="container">
             <div class="row">
                 <!-- swiper / slider -->
@@ -186,8 +186,8 @@
                                     </p>
 
                                     <!-- call to action buttons -->
-                                    <a data-aos="fade-right" data-aos-delay="900" href="#" class="btn btn-primary">Call to action 1</a>
-                                    <a data-aos="fade-right" data-aos-delay="900" href="#" class="btn btn-primary">Call to action 2</a>
+                                    <!-- <a data-aos="fade-right" data-aos-delay="900" href="#" class="btn btn-primary">Call to action 1</a> -->
+                                    <!-- <a data-aos="fade-right" data-aos-delay="900" href="#" class="btn btn-primary">Call to action 2</a> -->
                                 </div>
                             </div>
                             <!-- swiper / slide element end -->
@@ -206,8 +206,8 @@
                                     </p>
 
                                     <!-- call to action buttons -->
-                                    <a data-aos="fade-right" data-aos-delay="900" href="#" class="btn btn-primary">Call to action 3</a>
-                                    <a data-aos="fade-right" data-aos-delay="900" href="#" class="btn btn-primary">Call to action 4</a>
+                                    <!-- <a data-aos="fade-right" data-aos-delay="900" href="#" class="btn btn-primary">Call to action 3</a> -->
+                                    <!-- <a data-aos="fade-right" data-aos-delay="900" href="#" class="btn btn-primary">Call to action 4</a> -->
                                 </div>
                             </div>
                             <!-- swiper / slide element end -->
