--- a/industries.html
+++ b/industries.html
@@ -178,7 +178,7 @@
                                 <div class="single-slide mb-5 pb-5">
                                     <!-- short text heading -->
                                     <h1 class="mb-5 mt-0 pb-5" data-aos="fade-right" data-aos-delay="200">
-                                        Industry
+                                        Industries
                                     </h1>
 
                                     <!-- brief text -->
