--- a/products-services.html
+++ b/products-services.html
@@ -212,7 +212,7 @@
 
 
     <!-- Services Start -->
-    <section class="services pt-0">
+    <section class="services pt-0 bg-white">
         <div class="container">
             <!-- services header -->
             <!-- <div class="title text-center">
@@ -233,7 +233,7 @@
                                 
 
                                 <!-- service group description -->
-                                <p class="pb-2"> Donec volutpat tincidunt neque, vitae lobortis libero mattis sed tempus.</p>
+                                <p class=""> Donec volutpat tincidunt neque, vitae lobortis libero mattis sed tempus.</p>
                                 
                                 <!-- services list -->
                                 <div class="" style="border-left: 0px; border-right: 0px; border-bottom: 0px;" >
@@ -254,23 +254,23 @@
                             <!-- <img class="mr-4" src="assets/images/service2.png" alt="Web Development"> -->
                             <div class="media-body">
                                 <a href="./products-services.html#digital_solutions"><h5>Digital Solutions</h5></a>
-                                <p class="py-3"> Donec volutpat tincidunt neque, vitae lobortis libero mattis sed tempus.</p>
+                                <p class=""> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque dicta aliquid accusamus error nostrum facilis, quae distinctio. Ea, nam quod!</p>
                                 <div class="" style="border-bottom: 0px;">
                                     <ul class="list-group list-group-flush " style="flex-direction: row1;">
                                         <div class="row mb-1">
-                                            <li class="list-group-item col-lg-6"><img width="49" height="49" class="" src="assets/images/services icons/crm.png" alt="Customer Relationship Management"> <a class="text-secondary" href="#customer-relationship-management">Customer Relationship Management</a> </li>
+                                            <li class="list-group-item col-lg-6" style="margin-bottom: 0px;" ><img width="49" height="49" class="" src="assets/images/services icons/crm.png" alt="Customer Relationship Management"> <a class="text-secondary" href="#customer-relationship-management">Customer Relationship Management</a> </li>
                                             <li class="list-group-item col-lg-6" style="border-top: 0px;"><img width="49" height="49" class="mr-2" src="assets/images/services icons/custom app dev.png" alt="Custom Application Development"> <a class="text-secondary" href="#custom-application-development">Custom Application Development</a> </li>
                                         </div>
                                         <div class="row mb-1">
-                                            <li class="list-group-item col-lg-6"><img width="49" height="49" class="mr-2" src="assets/images/services icons/ecm.png" alt="Electronic Content Management"> <a class="text-secondary" href="#electronic-content-management">Electronic Content Management</a> </li>
+                                            <li class="list-group-item col-lg-6" style="margin-bottom: 0px;" ><img width="49" height="49" class="mr-2" src="assets/images/services icons/ecm.png" alt="Electronic Content Management"> <a class="text-secondary" href="#electronic-content-management">Electronic Content Management</a> </li>
                                             <li class="list-group-item col-lg-6" style="border-top: 0px;" ><img width="49" height="49" class="mr-2" src="assets/images/services icons/ppm.png" alt="Project Portfolio Management"> <a class="text-secondary" href="#project-portfolio-management">Project Portfolio Management</a> </li>
                                         </div>
                                         <div class="row mb-1">
-                                            <li class="list-group-item col-lg-6"><img width="49" height="49" class="mr-2" src="assets/images/services icons/ecm.png" alt="Electronic Content Management"> <a class="text-secondary" href="#eprocurement">eProcurement</a> </li>
+                                            <li class="list-group-item col-lg-6" style="margin-bottom: 0px;" ><img width="49" height="49" class="mr-2" src="assets/images/services icons/ecm.png" alt="Electronic Content Management"> <a class="text-secondary" href="#eprocurement">eProcurement</a> </li>
                                             <li class="list-group-item col-lg-6" style="border-top: 0px;" ><img width="49" height="49" class="mr-2" src="assets/images/services icons/ppm.png" alt="Project Portfolio Management"> <a class="text-secondary" href="#enterprise-resource-planning">Enterprise Resource Planning</a> </li>
                                         </div>
                                         <div class="row mb-1">
-                                            <li class="list-group-item col-lg-6"><img width="49" height="49" class="mr-2" src="assets/images/services icons/real estate.png" alt="Real Estate Management System"> <a class="text-secondary" href="#real-estate-management-system"> Real Estate Management System</a></li>
+                                            <li class="list-group-item col-lg-6" style="margin-bottom: 0px;" ><img width="49" height="49" class="mr-2" src="assets/images/services icons/real estate.png" alt="Real Estate Management System"> <a class="text-secondary" href="#real-estate-management-system"> Real Estate Management System</a></li>
                                             <li class="list-group-item col-lg-6" style="border-top: 0px;" ><img width="49" height="49" class="mr-2" src="assets/images/services icons/web & mobile.png" alt="Web and Mobile Apllications"> <a class="text-secondary" href="#web-and-mobile-applications">Web and Mobile Apllications</a> </li>
                                         </div>
                                     </ul>
@@ -327,13 +327,13 @@
     <!-- Services End -->
 
     <!-- Consulting Trust Start -->
-    <section id="consulting" class="trust my-4 pt-0 mt-0">
+    <section id="consulting" class="trust pt-0 mt-0 bg-white" style="border-top: solid 0.5rem #F0640C ; ">
         <div class="container">
             <div class="row">
                 <div class=" col-xl-12" data-aos="fade-right" data-aos-delay="200" data-aos-duration="800">
-                    <div class="title pt-3 mb-3">
+                    <div class="title py-3 mb-0">
                         <!-- <h6 class="title-primary">Consulting</h6> -->
-                        <h1 class="text-orange">Consulting</h1>
+                        <h2 class="title title-blue pt-0 mb-0">Consulting</h2>
                     </div>
                     <!-- <p>
                         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facere perspiciatis quisquam officiis cumque distinctio est unde. Et, nam eligendi? Necessitatibus?
@@ -341,9 +341,9 @@
 
                     <!-- <h5>Stratedgy and Operations</h5> -->
 
-                    <div id="accordion" role="tablist" class="p-2 mb-2 bg-light rounded">
+                    <div id="accordion" role="tablist" class="p-2 mb-2 bg-white rounded">
                         <!-- strategy and operations -->
-                        <div id="strategy-and-operations" class="card  my-2 rounded pt-5">
+                        <div id="strategy-and-operations" class="card  my-2 rounded">
                           <div class="card-header" role="tab" id="headingOne">
                             <h5 class="mb-0">
                               <h5 data-toggle="collapse" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne" class="collapsed text-primary"primary">
