--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
     <title>Quality Designs | About</title>
     <!-- Stylesheets & Fonts -->
     <!-- Google Fonts -->
-    <!-- <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700,700i%7CRajdhani:400,600,700" rel="stylesheet"> -->
+    <!-- <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700,700i%7C" rel="stylesheet"> -->
     <!-- Plugins Stylesheets -->
     <link rel="stylesheet" href="assets/css/loader/loaders.css">
     <link rel="stylesheet" href="assets/css/font-awesome/font-awesome.css">
@@ -223,7 +223,7 @@
                 <!-- about text -->
                 <div class="col-lg-12 col-md-12 my-auto text-center"  data-aos="fade-right" data-aos-delay="400" data-aos-duration="800">
                     <div class="title">
-                        <h3 class="title-blue">about Quality Designs</h3>
+                        <!-- <h3 class="title-blue">about Quality Designs</h3> -->
                     </div>
 
                     <!-- about text -->
@@ -234,9 +234,9 @@
                         workplace productivity, and customer experience through the effective use and adoption
                         of technology.
                     </p>
-                    <a href="#vision-mission" class="btn btn-primary mt-0">
+                    <!-- <a href="#vision-mission" class="btn btn-primary mt-0">
                         <i class="fa fas fa-arrow-down fa-3x"></i>
-                    </a>
+                    </a> -->
                 </div>
             </div>
         </div>
@@ -286,7 +286,7 @@
                 <!-- Values text -->
                 <div class="col-lg-12 text-center col-md-12 my-auto" data-aos="fade-right" data-aos-delay="400" data-aos-duration="800">
                     <div class="title">
-                        <h3 class="title-blue">Quality Designs Values</h3>
+                        <h3 class="title-blue"> <span class="light-sans"> Quality Designs</span> <strong>Values</strong> </h3>
                     </div>
     
                     <!-- about text -->
@@ -358,7 +358,7 @@
                         <div class=" text-center">
                             <div class="row">
                                     <div class="title col-md-12 mb-0">
-                                        <h3 class="title-orange" data-aos="fade-up" data-aos-delay="600" data-aos-duration="600" >Message From Our Leader</h3>
+                                        <h3 class="my-3" data-aos="fade-up" data-aos-delay="600" data-aos-duration="600" >Message From Our Leader</h3>
                                     </div>
 
                                     <div class="content h-100 w-100">
