--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <!-- right -->
                 <div class="contact">
                     <a href="tel:+27312661790" class="tel mr-3"><i class="fa fa-phone" aria-hidden="true"></i>(+27) 31 266 1790</a>
-                    <a href="mailto:Support@companydomain.com" class="mr-3"><i class="fa fa-envelope" aria-hidden="true"></i>info@qualitydesigns.africa</a>
+                    <a href="mailto:Support@companydomain.co.za" class="mr-3"><i class="fa fa-envelope" aria-hidden="true"></i>info@qualitydesigns.co.za</a>
                     <a href="vecancies.html" class="mr-3"> <i class="fa fa-users"></i> Careers</a>
                 </div>
                 </div>
@@ -241,8 +241,8 @@
     <!-- Hero End -->
 
     <!-- About us Start -->
-    <section class="featured p-0 " id="about">
-        <div class="container my-5 text-center">
+    <section class="featured p-0 bg-grey " id="about">
+        <div class="container my-0 text-center">
             <div class="row py-5">
                 <div class="my-auto col-lg-12 col-md-12"  data-aos="fade-right" data-aos-delay="400" data-aos-duration="800">
                     <div class="title">
@@ -278,7 +278,7 @@
     <!-- about us End -->
 
     <!-- Services Start -->
-    <section class="services py-3 mt-5 pt-5">
+    <section class="services py-3 mt-0 pt-5 bg-white">
         <div class="container">
             <!-- services header -->
             <div class="title text-center" data-aos="fade-right" data-aos-delay="200" data-aos-duration="800">
@@ -299,7 +299,7 @@
                                 
 
                                 <!-- service group description -->
-                                <p class="pb-2"> Donec volutpat tincidunt neque, vitae lobortis libero mattis sed tempus.</p>
+                                <p class=""> Donec volutpat tincidunt neque, vitae lobortis libero mattis sed tempus.</p>
                                 
                                 <!-- services list -->
                                 <div class="" style="border-left: 0px; border-right: 0px; border-bottom: 0px;" >
@@ -320,23 +320,23 @@
                             <!-- <img class="mr-4" src="assets/images/service2.png" alt="Web Development"> -->
                             <div class="media-body">
                                 <a href="./products-services.html#digital_solutions"><h5>Digital Solutions</h5></a>
-                                <p class="py-3"> Donec volutpat tincidunt neque, vitae lobortis libero mattis sed tempus.</p>
+                                <p class=""> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odit, delectus. Ratione dicta soluta nesciunt repellendus perferendis necessitatibus. Quis, ducimus assumenda.</p>
                                 <div class="" style="border-bottom: 0px;">
                                     <ul class="list-group list-group-flush " style="flex-direction: row1;">
                                         <div class="row mb-1">
-                                            <li class="list-group-item col-lg-6"><img width="49" height="49" class="" src="assets/images/services icons/crm.png" alt="Customer Relationship Management"> <a class="text-secondary" href="./products-services.html#customer-relationship-management">Customer Relationship Management</a> </li>
+                                            <li class="list-group-item col-lg-6" style="margin-bottom: 0px;" ><img width="49" height="49" class="" src="assets/images/services icons/crm.png" alt="Customer Relationship Management"> <a class="text-secondary" href="./products-services.html#customer-relationship-management">Customer Relationship Management</a> </li>
                                             <li class="list-group-item col-lg-6" style="border-top: 0px;"><img width="49" height="49" class="mr-2" src="assets/images/services icons/custom app dev.png" alt="Custom Application Development"> <a class="text-secondary" href="./products-services.html#custom-application-development">Custom Application Development</a> </li>
                                         </div>
                                         <div class="row mb-1">
-                                            <li class="list-group-item col-lg-6"><img width="49" height="49" class="mr-2" src="assets/images/services icons/ecm.png" alt="Electronic Content Management"> <a class="text-secondary" href="./products-services.html#electronic-content-management">Electronic Content Management</a> </li>
+                                            <li class="list-group-item col-lg-6" style="margin-bottom: 0px;" ><img width="49" height="49" class="mr-2" src="assets/images/services icons/ecm.png" alt="Electronic Content Management"> <a class="text-secondary" href="./products-services.html#electronic-content-management">Electronic Content Management</a> </li>
                                             <li class="list-group-item col-lg-6" style="border-top: 0px;" ><img width="49" height="49" class="mr-2" src="assets/images/services icons/ppm.png" alt="Project Portfolio Management"> <a class="text-secondary" href="./products-services.html#project-portfolio-management">Project Portfolio Management</a> </li>
                                         </div>
                                         <div class="row mb-1">
-                                            <li class="list-group-item col-lg-6"><img width="49" height="49" class="mr-2" src="assets/images/services icons/ecm.png" alt="Electronic Content Management"> <a class="text-secondary" href="./products-services.html#eprocurement">eProcurement</a> </li>
+                                            <li class="list-group-item col-lg-6" style="margin-bottom: 0px;" ><img width="49" height="49" class="mr-2" src="assets/images/services icons/ecm.png" alt="Electronic Content Management"> <a class="text-secondary" href="./products-services.html#eprocurement">eProcurement</a> </li>
                                             <li class="list-group-item col-lg-6" style="border-top: 0px;" ><img width="49" height="49" class="mr-2" src="assets/images/services icons/ppm.png" alt="Project Portfolio Management"> <a class="text-secondary" href="./products-services.html#enterprise-resource-planning">Enterprise Resource Planning</a> </li>
                                         </div>
                                         <div class="row mb-1">
-                                            <li class="list-group-item col-lg-6"><img width="49" height="49" class="mr-2" src="assets/images/services icons/real estate.png" alt="Real Estate Management System"> <a class="text-secondary" href="./products-services.html#real-estate-management-system"> Real Estate Management System</a></li>
+                                            <li class="list-group-item col-lg-6" style="margin-bottom: 0px;" ><img width="49" height="49" class="mr-2" src="assets/images/services icons/real estate.png" alt="Real Estate Management System"> <a class="text-secondary" href="./products-services.html#real-estate-management-system"> Real Estate Management System</a></li>
                                             <li class="list-group-item col-lg-6" style="border-top: 0px;" ><img width="49" height="49" class="mr-2" src="assets/images/services icons/web & mobile.png" alt="Web and Mobile Apllications"> <a class="text-secondary" href="./products-services.html#web-and-mobile-applications">Web and Mobile Apllications</a> </li>
                                         </div>
                                     </ul>
@@ -513,7 +513,7 @@
                                 <!-- email -->
                                 <li class="list-group-item pl-0 pb-0" style="background-color: #FF9D00; border: none;">
                                     <i class="fa fa-envelope-o mr-2"></i>
-                                    <a href="mailto:info@qualitydesigns.africa" target="_blank" class="text-white">info@qualitydesigns.africa</a>
+                                    <a href="mailto:info@qualitydesigns.co.za" target="_blank" class="text-white">info@qualitydesigns.co.za</a>
                                 </li>
 
                                 <!-- fax -->
