contact us and vecancies left

--- a/contact-us.html
+++ b/contact-us.html
@@ -171,13 +171,13 @@
             <div class="row">
                 <!-- swiper / slider -->
                 <div class="col-12 offset-md-1 col-md-11">
-                    <div class="swiper-container hero-slider pt-5">
+                    <div class="swiper-container hero-slider pt-0">
                         <div class="">
                             <!-- swiper / slide element start -->
                             <div class="swiper-slide slide-content mb-5 d-flex align-items-center">
-                                <div class="single-slide mb-5 pb-5">
+                                <div class="single-slide mb-5 pb-5 mt-0 pt-0">
                                     <!-- short text heading -->
-                                    <h1 class="mb-5 mt-0 pb-5" data-aos="fade-right" data-aos-delay="200">
+                                    <h1 class="mb-5 mt-0 pb-5 pt-0" data-aos="fade-right" data-aos-delay="200">
                                         Contact Us
                                     </h1>
 
