--- a/about.html
+++ b/about.html
@@ -217,7 +217,7 @@
     <!-- <div class="spacer py-5"></div> -->
 
     <!-- about Featured Start -->
-    <section class="featured py-4" id="about">
+    <section class="featured py-4 bg-white mb-5 " id="about">
         <div class="container ">
             <div class="row ">
                 <!-- about text -->
@@ -227,7 +227,7 @@
                     </div>
 
                     <!-- about text -->
-                    <p>
+                    <p class="mb-0">
                         Quality designs (QD) - a leading-edge software provider and IT services, to develop
                         efficient and effective solutions that keep businesses one-step ahead. We offer strategy,
                         consulting, development, support and technical services to enhance digital business,
@@ -244,13 +244,13 @@
     <!-- about Featured End -->
 
     <!-- vision and mission Featured Start -->
-    <section id="vision-mission" class="featured py-4">
+    <section id="vision-mission" class="featured py-4 bg-grey">
         <div class="container ">
-            <div class="row pt-5 mt-5">
+            <div class="row">
                 <!-- Vidion text -->
-                <div class="col-lg-6 col-md-12 my-auto pt-3" data-aos="fade-right" data-aos-delay="400" data-aos-duration="800">
+                <div class="col-lg-6 col-md-12 mb-auto pt-3 mt-0" data-aos="fade-right" data-aos-delay="400" data-aos-duration="800">
                     <div class="title">
-                        <h3 class="title-blue">Quality Designs Vision</h3>
+                        <h3 class="title-blue"> <span class="light-sans">Quality Designs</span> Vision</h3>
                     </div>
     
                     <!-- about text -->
@@ -261,9 +261,9 @@
                 </div>
 
                 <!-- mission text -->
-                <div class="col-lg-6 col-md-12 my-auto pt-3"  data-aos="fade-right" data-aos-delay="400" data-aos-duration="800">
+                <div class="col-lg-6 col-md-12 mb-auto pt-3 mt-0"  data-aos="fade-right" data-aos-delay="400" data-aos-duration="800">
                     <div class="title">
-                        <h3 class="title-blue">Quality Designs mission</h3>
+                        <h3 class="title-blue"><span class="light-sans">Quality Designs</span> mission</h3>
                     </div>
 
                     <!-- about text -->
@@ -280,7 +280,7 @@
     <!-- Featured End -->
 
     <!-- Featured Start -->
-    <section id="mission" class="featured py-0 mt-3">
+    <section id="mission" class="featured py-0 pt-5 bg-grey">
         <div class=" ">
             <div class="row">
                 <!-- Values text -->
@@ -350,24 +350,24 @@
 
     <!-- message Start -->
     <section id="message" class="testimonial-and-clients bg-primary text-white mt-4">
-        <div class="container">
+        <div class="container-fluid bg-blue px-0">
             <!-- testimonials start -->
-            <div class="testimonials pt-3 text-white">
+            <div class="testimonials pt-0 text-white pb-0">
                 <div class="swiper-container test-slider">
                     <div class="swiper-wrapper">
                         <div class=" text-center">
                             <div class="row">
-                                    <div class="title col-md-12 mb-0">
-                                        <h3 class="my-3" data-aos="fade-up" data-aos-delay="600" data-aos-duration="600" >Message From Our Leader</h3>
+                                    <div class="title col-md-12 mb-0 py-3 bg-orange">
+                                        <h3 class="my-3 title-blue" data-aos="fade-up" data-aos-delay="600" data-aos-duration="600" > <span class="light-sans title-blue">Message</span>  From Our Leader</h3>
                                     </div>
 
-                                    <div class="content h-100 w-100">
-                                        <div class="card mt-0">
+                                    <div class="content h-100 w-100 container-fluid bg-blue">
+                                        <div class="card  container px-0">
                                             <div class="img-content">
                                                 <div class=""></div>
                                                 <img src="assets/images/leader3.png" alt="img">
                                                 <div class="bottom-box pl-5">
-                                                    <h3>Eugine Silinnda</h3>
+                                                    <h3>Eugine Silinda</h3>
                                                     <p>Managing Director</p>
                                                 </div>
                                             </div>
