--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
 
                 <!-- right -->
                 <div class="contact">
-                    <a href="tel:+27312661790" class="tel mr-3"><i class="fa fa-phone" aria-hidden="true"></i>(+27) 31 266 1790</a>
-                    <a href="mailto:Support@companydomain.co.za" class="mr-3"><i class="fa fa-envelope" aria-hidden="true"></i>info@qualitydesigns.co.za</a>
-                    <a href="vecancies.html" class="mr-3"> <i class="fa fa-users"></i> Careers</a>
+                    <a href="tel:+27312661790" class="tel mr-3"><i class="fa fa-phone text-white" aria-hidden="true"></i>(+27) 31 266 1790</a>
+                    <a href="mailto:Support@companydomain.co.za" class="mr-3"><i class="fa fa-envelope text-white" aria-hidden="true"></i>info@qualitydesigns.co.za</a>
+                    <a href="vecancies.html" class="mr-3"> <i class="fa fa-users text-white"></i> Careers</a>
                 </div>
                 </div>
 
@@ -170,13 +170,13 @@
             <div class="row">
                 <!-- swiper / slider -->
                 <div class="col-12 offset-md-1 col-md-11">
-                    <div class="swiper-container hero-slider pt-5">
+                    <div class="swiper-container hero-slider">
                         <div class="swiper-wrapper">
                             <!-- swiper / slide element start -->
                             <div class="swiper-slide slide-content d-flex align-items-center">
                                 <div class="single-slide">
                                     <!-- short text heading -->
-                                    <h1 data-aos="fade-right" data-aos-delay="200">Short Text 1
+                                    <h1 class="mt-0" data-aos="fade-right" data-aos-delay="200">Short Text 1
                                     </h1>
 
                                     <!-- brief text -->
@@ -196,7 +196,7 @@
                             <div class="swiper-slide slide-content d-flex align-items-center">
                                 <div class="single-slide">
                                     <!-- short text heading -->
-                                    <h1 data-aos="fade-right" data-aos-delay="200">Short Text 2
+                                    <h1 class="mt-0" data-aos="fade-right" data-aos-delay="200">Short Text 2
                                     </h1>
 
                                     <!-- brief text -->
@@ -247,7 +247,7 @@
                 <div class="my-auto col-lg-12 col-md-12"  data-aos="fade-right" data-aos-delay="400" data-aos-duration="800">
                     <div class="title">
                         <!-- <h6 class="title-primary">about Quality Designs</h6> -->
-                        <h3 class="title-l-orange">about Quality Designs</h3>
+                        <h3 class="title-blue"> <span class="light-sans ">about</span>  Quality Designs</h3>
                     </div>
 
                     <!-- about text -->
@@ -400,7 +400,8 @@
                 <!-- clients header -->
                 <div class="title text-center">
                     <!-- <h6>Our Speakers</h6> -->
-                    <h3 class="title-orange">Our Partners</h3>
+                    <h3 class="title-blue"> <span class="light-sans">Our</span>  Partners</h3>
+                    <!-- <h3 class="title-orange"> <span class="light-sans title-orange">Our</span>  Partners</h3> -->
                 </div>
 
                 <!-- clients  -->
@@ -448,7 +449,7 @@
 
     <!-- scroll to top start -->
     <a id="back-to-top" href="#" class="btn1 1btn-secondary 1btn-lg back-to-top" role="button" title="Click to return on the top page" data-toggle="tooltip" data-placement="left">
-        <i class=" fa fa-4x fas fa-chevron-circle-up text-primary"></i>
+        <i class=" fa fa-2x fas fa-chevron-circle-up text-primary"></i>
     </a>
     <!-- scroll to top end -->
 
@@ -478,10 +479,10 @@
                         <div class="single-widget contact-widget text-white">
                             <h5>Services</h5>
                             <ul class="list-group bg-secondary" style="background-color: #FF9D00;" >
-                                <li class="list-group-item pb-0 pl-2" style="background-color: #FF9D00; border: none;"><a class="text-white" href="products-services.html#consulting">Consulting</a class="text-white"></li>
-                                <li class="list-group-item pb-0 pl-2" style="background-color: #FF9D00; border: none;"><a class="text-white" href="products-services.html#digital-solutions">Digital Solutions</a></li>
-                                <li class="list-group-item pb-0 pl-2" style="background-color: #FF9D00; border: none;"><a class="text-white" href="products-services.html#cloud-and-services">Cloud Services</a></li>
-                                <li class="list-group-item pb-0 pl-2" style="background-color: #FF9D00; border: none;"><a class="text-white" href="products-services.html#devices">Devices</a></li>
+                                <li class="list-group-item pb-0 pl-0" style="background-color: #FF9D00; border: none;"><a class="text-white" href="products-services.html#consulting">Consulting</a class="text-white"></li>
+                                <li class="list-group-item pb-0 pl-0" style="background-color: #FF9D00; border: none;"><a class="text-white" href="products-services.html#digital-solutions">Digital Solutions</a></li>
+                                <li class="list-group-item pb-0 pl-0" style="background-color: #FF9D00; border: none;"><a class="text-white" href="products-services.html#cloud-and-services">Cloud Services</a></li>
+                                <li class="list-group-item pb-0 pl-0" style="background-color: #FF9D00; border: none;"><a class="text-white" href="products-services.html#devices">Devices</a></li>
                             </ul>
                         </div>
                     </div>
@@ -491,10 +492,10 @@
                         <div class="single-widget contact-widget text-white">
                             <h5>Useful Links</h5>
                             <ul class="list-group bg-secondary" style="background-color: #FF9D00;" >
-                                <li class="list-group-item py-1 pl-4" style="background-color: #FF9D00; border: none;"><a class="text-white" href="products-services.html">services</a class="text-white"></li>
-                                <li class="list-group-item py-1 pl-4" style="background-color: #FF9D00; border: none;"><a class="text-white" href="vecancies.html">Available Vacancies</a></li>
-                                <li class="list-group-item py-1 pl-4" style="background-color: #FF9D00; border: none;"><a class="text-white" href="about.html">Our Leadership</a></li>
-                                <li class="list-group-item py-1 pl-4" style="background-color: #FF9D00; border: none;"><a class="text-white" href="about.html">About Us</a></li>
+                                <li class="list-group-item py-1 pl-0" style="background-color: #FF9D00; border: none;"><a class="text-white" href="products-services.html">services</a class="text-white"></li>
+                                <li class="list-group-item py-1 pl-0" style="background-color: #FF9D00; border: none;"><a class="text-white" href="vecancies.html">Available Vacancies</a></li>
+                                <li class="list-group-item py-1 pl-0" style="background-color: #FF9D00; border: none;"><a class="text-white" href="about.html">Our Leadership</a></li>
+                                <li class="list-group-item py-1 pl-0" style="background-color: #FF9D00; border: none;"><a class="text-white" href="about.html">About Us</a></li>
                             </ul>
                         </div>
                     </div>
@@ -517,10 +518,10 @@
                                 </li>
 
                                 <!-- fax -->
-                                <li class="list-group-item pl-0 pb-0" style="background-color: #FF9D00; border: none;">
+                                <!-- <li class="list-group-item pl-0 pb-0" style="background-color: #FF9D00; border: none;">
                                     <i class="fa fa-fax mr-2"></i>
                                     <a class="text-white" href="fax:+27862080595" target="_blank">(+27) 86 208 0595</a>
-                                </li>
+                                </li> -->
 
                                 </ul>
                         </div>
@@ -540,11 +541,16 @@
                                     <i class="fa fa-mobile mr-2"></i>
                                     <a class="text-white" href="tel:+27722806395" target="_blank">(+27) 72 280 6395</a>
                                 </li>
-                                                                    
+
+                                <!-- fax -->
                                 <li class="list-group-item pl-0 pb-0" style="background-color: #FF9D00; border: none;">
+                                    <i class="fa fa-fax mr-2"></i>
+                                    <a class="text-white" href="fax:+27862080595" target="_blank">(+27) 86 208 0595</a>
+                                </li>
+                                <!-- <li class="list-group-item pl-0 pb-0" style="background-color: #FF9D00; border: none;">
                                     <i class="fa fa-whatsapp mr-2"></i>
                                     <a class="text-white" href="https://wa.me/27722806395" target="_blank">(+27) 72 280 6395</a>
-                                </li>
+                                </li> -->
                                                                     
                             </ul>
 
