--- a/industries.html
+++ b/industries.html
@@ -210,7 +210,7 @@
 
 
     <!-- Industry Services Start -->
-    <section class="services py-3">
+    <section class="services bg-white py-3">
         <div class="container">
             <!-- <div class="title text-center">
                 <h6>Our Speakers</h6>
@@ -219,7 +219,7 @@
             <div class="container">
                 <div class="row">
                     <!-- Banking Financial Services & Insurance -->
-                    <div id="banking" class="col-lg-12 bg-light my-1">
+                    <div id="banking" class="col-lg-12 bg-white my-1">
                         <div class="media mb-3" data-aos="fade-up" data-aos-delay="200" data-aos-duration="400">
                             <img class="mr-4" src="assets/images/service1.png" alt="Web Development">
                             <div class="media-body">
@@ -237,7 +237,7 @@
                     </div>
 
                     <!-- Retail, Consumer Packaged Goods, Transportation -->
-                    <div id="retail" class="col-lg-12 bg-light my-1">
+                    <div id="retail" class="col-lg-12 bg-white my-1">
                         <div class="media mb-3" data-aos="fade-up" data-aos-delay="400" data-aos-duration="600">
                             <img class="mr-4" src="assets/images/service2.png" alt="Web Development">
                             <div class="media-body">
@@ -252,7 +252,7 @@
                     </div>
 
                     <!-- Government Sector -->
-                    <div id="government" class="col-lg-12 bg-light my-1">
+                    <div id="government" class="col-lg-12 bg-white my-1">
                         <div class="media mb-3" data-aos="fade-up" data-aos-delay="600" data-aos-duration="800">
                             <img class="mr-4" src="assets/images/service3.png" alt="Web Development">
                             <div class="media-body">
@@ -267,7 +267,7 @@
                     </div>
 
                     <!-- Healthcare, Life Science & Services -->
-                    <div id="healthcare" class="col-lg-12 bg-light my-1">
+                    <div id="healthcare" class="col-lg-12 bg-white my-1">
                         <div class="media mb-3" data-aos="fade-up" data-aos-delay="200" data-aos-duration="400">
                             <img class="mr-4" src="assets/images/service4.png" alt="Web Development">
                             <div class="media-body">
@@ -280,7 +280,7 @@
                     </div>
 
                     <!-- Energy, Natural Resources Utilities and Engineering & Construction -->
-                    <div id="energy" class="col-lg-12 bg-light my-1">
+                    <div id="energy" class="col-lg-12 bg-white my-1">
                         <div class="media mb-3" data-aos="fade-up" data-aos-delay="400" data-aos-duration="600">
                             <img class="mr-4" src="assets/images/service1.png" alt="Web Development">
                             <div class="media-body">
@@ -296,7 +296,7 @@
                     </div>
 
                     <!-- Graphic Design, Printing, Corporate Branding & Advertising -->
-                    <div id="graphic" class="col-lg-12 bg-light my-1">
+                    <div id="graphic" class="col-lg-12 bg-white my-1">
                         <div class="media mb-3" data-aos="fade-up" data-aos-delay="600" data-aos-duration="800">
                             <img class="mr-4" src="assets/images/service5.png" alt="Web Development">
                             <div class="media-body">
@@ -322,6 +322,10 @@
         <i class=" fa fa-4x fas fa-chevron-circle-up text-primary"></i>
     </a>
     <!-- scroll to top end -->
+
+    <!-- grey strip -->
+    <div class="strip"></div>
+    <!-- grey strip -->
 
     <!-- Footer Start -->
     <footer>
